--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -150,7 +150,7 @@ WebKit inertia scrolling is being added here for any present/future devices that
 .middle-right,
 #sidebar-wrapper-right {
     overflow: auto;
-    height: auto;
+    height: 100%;
     min-height: 100%;
     padding: 0;
     -webkit-overflow-scrolling: touch;
