--- a/sass/_sidebar-left.scss
+++ b/sass/_sidebar-left.scss
@@ -82,6 +82,14 @@
     text-decoration: none;
     color: #fff;
     background: rgba(9, 33, 71, 0.3);
+    &:after {
+        font-family: "FontAwesome";
+        font-weight: 100;
+        content: '\f054'; /*-- fa-chevron-right --*/
+        font-size: 10px;
+        float: right;
+        margin-right: 16px;
+    }
 }
 
 .sidebar-nav-left li a:active,
@@ -89,6 +97,13 @@
     text-decoration: none;
     background: rgba(9, 33, 71, 0.3);
     font-weight: 600;
+    &:after {
+        font-family: "FontAwesome";
+        content: '\f054'; /*-- fa-chevron-right --*/
+        font-size: 13px;
+        float: right;
+        margin-right: 12px;
+    }
 }
 
 .sidebar-nav > .sidebar-brand {
